--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
 
+  <h1>Prehistoric creatures</h1>
+
   <div class="grid">
     <div class="unit xs-1 s-1-2 m-1-2 l-1-4">
       <figure>
